# rmtoo

./: .travis.yml  COPYING  MANIFEST.in  Makefile  README.md  Readme.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: workflows
.github/workflows/: ci.yml  deploy.yml  main.yml
contrib/template_project/: Config.json  Makefile
doc/: Config1.json
doc/examples/EMailClient/: Makefile
doc/release_notes/: 24.rst
doc/traceability/: rmtoo-Traceability.md
docs/: CNAME  Roadmap.md  readme.md  workflow.md
docs/_posts/: 2010-02-15-presentations.md
docs/readme/: Readme-Hacking.md
docs/requirements/: VerificationStatusParserLatexLabel.req
docs/traceability/: build.sh  rmtoo-Traceability.md
docs/traceability/heart_of_gold/: dodo.py  run.sh
docs/traceability/heart_of_gold/import/: specification.hog.xlsx
docs/traceability/heart_of_gold/latex/LatexJinja2/: singleReq.tex
docs/traceability/heart_of_gold/specifications/: SYS-RS-001.req  SYS-RS-100.req  SYS-RS-101.req  SYS-RS-102.req  SYS-RS-200.req
docs/traceability/heart_of_gold/topics/: ProjectReqs.tic  Propulsion.tic
docs/traceability/spacewire/: Config.json
docs/traceability/spacewire/specifications/: ECSS-E-ST-50-12-1420004.req
docs/traceability/spacewire/topics/: ProjectReqs.tic
rmtoo/: __init__.py
rmtoo/imports/: abc.py  abcimports.py  xls.py
rmtoo/lib/: Import.py  RmtooMain.py
rmtoo/outputs/: LatexJinja2.py  Xls.py  xls.py
rmtoo/tests/RMTTest-Import/: RMTTest-Import.py  RMTTest-XlsImport.py  test-reqs.xlsx
rmtoo/tests/RMTTest-Output/: RMTTest-Xls.py  RMTTestLaTeXJinja2.py
src/rmtoo/: __init__.py
src/rmtoo/imports/: xls.py
src/rmtoo/lib/: VerificationStatusParser.py
tests/RMTTest-Blackbox/RMTTest-BB001/input/: Config.json  Config.yaml
tests/RMTTest-Blackbox/RMTTest-BB001/result_should/: req-graph1.dot
tests/RMTTest-Blackbox/RMTTest-BB001/result_should/reqspricing.ods-extracted/: meta.xml
tests/RMTTest-Blackbox/RMTTest-BB002/input/: Config.json  Config.yaml
tests/RMTTest-Blackbox/RMTTest-BB002/result_should/: req-graph1.dot
tests/RMTTest-Blackbox/RMTTest-BB006/input/: Config.json
tests/RMTTest-Blackbox/RMTTest-BB007/input/: Config.json
tests/RMTTest-Blackbox/RMTTest-BB010/result_should/reqspricing.ods-extracted/: content.xml
tests/RMTTest-Import/: RMTTest-XlsImport.py
tests/RMTTest-Output/: RMTTest-Xls.py  RMTTestLaTeXJinja2.py
tests/RMTTest-Unit/RMTTest-Core/: RMTTest-RecordTxt3.py  RMTTest-ReqStatusParser.py  requirements.aux
testspe/: Config.json
testspe/import/: testspecification-template.xlsx
testspe/latex/: LatexJinja2
testspe/requirements/: SW-COMP-TST-1.req  SW-COMP-TST-110.req
testspe/specifications/: SW-COMP-TST-1.req  SW-COMP-TST-100.req  SW-COMP-TST-102.req  SW-COMP-TST-120.req
testspe/topics/: ReqsDocument.tic
