[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rmtoo"
version = "24.0.2"
description = "Open Source Requirements Management Tool"
authors = [
  { name = "Andreas Florath", email = "rmtoo@florath.net" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flake8>=7.3.0",
    "gitdb>=4.0.1",
    "gitpython>=3.1.41",
    "jinja2>=2.10",
    "numpy>=2.0",
    "odfpy==1.3.4",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "scipy>=1.0",
    "setuptools>=80.9.0",
    "stevedore>=1.21",
    "tox>=4.28.3",
]
classifiers=[
    "Development Status :: 6 - Mature",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "http://rmtoo.florath.net"
Repository = "https://github.com/florath/rmtoo"

[project.scripts]
rmtoo = "rmtoo.lib.RmtooMain:main"
"rmtoo-normalize-dependencies" = "rmtoo.lib.main.NormalizeDependencies:main"
"rmtoo-pricing-graph" = "rmtoo.lib.main.PricingGraph:main"
"rmtoo-contrib-dir" = "rmtoo.lib.main.ContribDir:main"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "tox", "flake8", "xmldiff==2.4"]

# Stevedore plugins
[project.entry-points."rmtoo.input.plugin"]
"RDepDependsOn" = "rmtoo.inputs.RDepDependsOn:RDepDependsOn"
"RDepConstraints" = "rmtoo.inputs.RDepConstraints:RDepConstraints"
"RDepMasterNodes" = "rmtoo.inputs.RDepMasterNodes:RDepMasterNodes"
"RDepNoDirectedCircles" = "rmtoo.inputs.RDepNoDirectedCircles:RDepNoDirectedCircles"
"RDepOneComponent" = "rmtoo.inputs.RDepOneComponent:RDepOneComponent"
"RDepPriority" = "rmtoo.inputs.RDepPriority:RDepPriority"
"RDepSolvedBy" = "rmtoo.inputs.RDepSolvedBy:RDepSolvedBy"
"ReqCE3" = "rmtoo.inputs.ReqCE3:ReqCE3"
"ReqClass" = "rmtoo.inputs.ReqClass:ReqClass"
"ReqConstraints" = "rmtoo.inputs.ReqConstraints:ReqConstraints"
"ReqDescription" = "rmtoo.inputs.ReqDescription:ReqDescription"
"ReqEffortEst" = "rmtoo.inputs.ReqEffortEst:ReqEffortEst"
"ReqExpectedResult" = "rmtoo.inputs.ReqExpectedResult:ReqExpectedResult"
"ReqHistory" = "rmtoo.inputs.ReqHistory:ReqHistory"
"ReqInventedBy" = "rmtoo.inputs.ReqInventedBy:ReqInventedBy"
"ReqInventedOn" = "rmtoo.inputs.ReqInventedOn:ReqInventedOn"
"ReqName" = "rmtoo.inputs.ReqName:ReqName"
"ReqNote" = "rmtoo.inputs.ReqNote:ReqNote"
"ReqOwner" = "rmtoo.inputs.ReqOwner:ReqOwner"
"ReqPriority" = "rmtoo.inputs.ReqPriority:ReqPriority"
"ReqRationale" = "rmtoo.inputs.ReqRationale:ReqRationale"
"ReqStatus" = "rmtoo.inputs.ReqStatus:ReqStatus"
"ReqTestCase" = "rmtoo.inputs.ReqTestCase:ReqTestCase"
"ReqTopic" = "rmtoo.inputs.ReqTopic:ReqTopic"
"ReqType" = "rmtoo.inputs.ReqType:ReqType"

[project.entry-points."rmtoo.output.plugin"]
"graph2" = "rmtoo.outputs.graph2:graph2"
"graph" = "rmtoo.outputs.graph:graph"
"html" = "rmtoo.outputs.html:Html"
"latex2" = "rmtoo.outputs.latex2:latex2"
"LatexJinja2" = "rmtoo.outputs.LatexJinja2:LatexJinja2"
"oopricing1" = "rmtoo.outputs.oopricing1:oopricing1"
"prios" = "rmtoo.outputs.prios:prios"
"stats_burndown1" = "rmtoo.outputs.stats_burndown1:stats_burndown1"
"stats_reqs_cnt" = "rmtoo.outputs.stats_reqs_cnt:stats_reqs_cnt"
"stats_sprint_burndown1" = "rmtoo.outputs.stats_sprint_burndown1:stats_sprint_burndown1"
"tlp1" = "rmtoo.outputs.tlp1:Tlp1"
"version1" = "rmtoo.outputs.version1:version1"
"xml1" = "rmtoo.outputs.xml1:Xml1"
"xml_ganttproject_2" = "rmtoo.outputs.xml_ganttproject_2:xml_ganttproject_2"

[project.entry-points."rmtoo.output.markup"]
"latex" = "rmtoo.lib.Markup:LaTeX"
"txt" = "rmtoo.lib.Markup:Txt"
"html" = "rmtoo.lib.Markup:Html"

[project.entry-points."rmtoo.input.requirement_status"]
"not done" = "rmtoo.lib.RequirementStatus:RequirementStatusNotDone"
"assigned" = "rmtoo.lib.RequirementStatus:RequirementStatusAssigned"
"finished" = "rmtoo.lib.RequirementStatus:RequirementStatusFinished"

[tool.sonar]
projectKey="florath_rmtoo"
organization="florath"

# This is the name and version displayed in the SonarCloud UI.
projectName="rmtoo"
projectVersion="25.0.1"

# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
sources="rmtoo"
tests="rmtoo/tests"
exclusions="**/tests/**,**/test_*.py"

# Encoding of the source code. Default is default system encoding
sourceEncoding="UTF-8"

python.coverage.reportPaths="rmtoo/coverage.xml"
